- Try to fir image in project cards and fixed line spacing inside button link

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ footer {
     .project-card img {
         width: 100%;
         height: 110px;
-        object-fit: cover;
+        object-fit: contain;
         border-bottom: 1px solid #4da3ff44;
     }
 
@@ -491,6 +491,7 @@ section h2 {
     border-radius: 6px;
     transition: background-color 0.3s ease;
     text-decoration: none;
+    white-space: nowrap;
 }
 
     .icon-link:hover {
